# catm-python-lib

./: .gitignore  README.md  parameters.toml  pyproject.toml
doxygen/: Doxyfile
doxygen/catm-python-lib/html/: ____init_____8py_source.html  ____main_____8py.html  ____main_____8py_source.html  analyser_2____init_____8py_source.html  annotated.html  annotated_dup.js  basepad_8py_source.html  catm_8py.html  catm_8py_source.html  catmviewer_8py.js  class_t_base_pad_shape_class.html  class_t_multi_channel_analyzer.html  classes.html  dataforming_8py.html  dataforming_8py.js  dataforming_8py_source.html  dir_28b8176bec4a925a8e6688a7d1cf4db0.html  dir_28b8176bec4a925a8e6688a7d1cf4db0.js  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_bf0fc9ef6cdb4d755121277421553caf.html  dir_fff4fe9aa457588924a09ac13242dcf5.html  dir_fff4fe9aa457588924a09ac13242dcf5.js  doxygen_crawl.html  gifgenerator_8py.html  gifgenerator_8py.js  index.html  menudata.js  namespacecatmlib_1_1readoutpad_1_1basepad.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  readoutpad_2____init_____8py_source.html  simulator_2____init_____8py.html  tracksimulation_8py.html  tracksimulation_8py_source.html  trialpad_8py_source.html  xcfgreader_8py.html
doxygen/catm-python-lib/latex/: ____init_____8py.tex  ____init_____8py_source.tex  ____main_____8py_source.tex  analyser_2____init_____8py_source.tex  catm_8py.tex  catmviewer_8py_source.tex  class_t_base_pad_shape_class.tex  class_t_readout_pad_array.tex  dataforming_8py_source.tex  files.tex  gifgenerator_8py.tex  gifgenerator_8py_source.tex  mcaanalysis_8py_source.tex  namespaces.tex  readoutpad_2____init_____8py.tex  refman.tex  (+4 more)
example/artemis-map/: catm-beamtpc-sample.map  catm-ssd-sample.map
example/get-config/: config-sample-001.xcfg  config-sample-002.xcfg
example/mca-sample/: calibration.spe  fn-dv375.spe  fn-dv380.spe  fn-dv385.spe  fn-dv390.spe  fn-dv395.spe  fn-dv400.spe  nn-dv380.spe  nn-dv385-spe  nn-dv390.spe  nn-dv395.spe  nn-dv400.spe
src/catmlib/: __init__.py  __main__.py
(+217 files in other folders)
